--- a/SLBingoCore.vcxproj.filters
+++ b/SLBingoCore.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="error.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cstypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
