--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -32,11 +32,21 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=${{env.BUILD_PLATFORM}} ${{env.SOLUTION_FILE_PATH}}
     
+    - name: Copy files
+      run: mkdir SLBingoCore && copy x64\Release\*.exe SLBingoCore\ && copy config.json SLBingoCore\
+      
+    - name: Zip Release
+      uses: thedoctor0/zip-release@master
+      with:
+        type: 'zip'
+        filename: 'SLBingoCore.zip'
+        path: 'SLBingoCore'
+
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         prerelease: false
         files: |
           LICENSE
-          x64/Release/*.exe
+          SLBingoCore.zip
 
