--- a/SLBingoCore.vcxproj
+++ b/SLBingoCore.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="memread.h" />
     <ClInclude Include="ReportGenerator.h" />
     <ClInclude Include="unsafe.h" />
+    <ClInclude Include="version.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
