--- a/SLBingoCore.vcxproj.filters
+++ b/SLBingoCore.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
