--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -33,14 +33,17 @@ jobs:
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=${{env.BUILD_PLATFORM}} ${{env.SOLUTION_FILE_PATH}}
     
     - name: Copy files
-      run: mkdir SLBingoCore && copy x64\Release\*.exe SLBingoCore\ && copy config.json SLBingoCore\
+      run: |
+        mkdir SLBingoCore-${{env.BUILD_PLATFORM}}-${{env.BUILD_CONFIGURATION}}
+        copy ${{env.BUILD_PLATFORM}}\${{env.BUILD_CONFIGURATION}}\*.exe SLBingoCore-${{env.BUILD_PLATFORM}}-${{env.BUILD_CONFIGURATION}}\ 
+        copy config.json SLBingoCore-${{env.BUILD_PLATFORM}}-${{env.BUILD_CONFIGURATION}}\
       
     - name: Zip Release
       uses: thedoctor0/zip-release@master
       with:
         type: 'zip'
-        filename: 'SLBingoCore.zip'
-        path: 'SLBingoCore'
+        filename: 'SLBingoCore-${{env.BUILD_PLATFORM}}-${{env.BUILD_CONFIGURATION}}.zip'
+        path: 'SLBingoCore-${{env.BUILD_PLATFORM}}-${{env.BUILD_CONFIGURATION}}'
 
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
@@ -48,5 +51,5 @@ jobs:
         prerelease: false
         files: |
           LICENSE
-          SLBingoCore.zip
+          SLBingoCore-${{env.BUILD_PLATFORM}}-${{env.BUILD_CONFIGURATION}}.zip
 
